--- a/AsyncJS/setTimeout.html
+++ b/AsyncJS/setTimeout.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Async JS  / setTimeout</h1>
-  <button id="btn">click</button>
+  <button id="btn">stop</button>
 
   <script>
     //setTimeout
