--- a/Events/index.html
+++ b/Events/index.html
@@ -5,12 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Events in JS</title>
 </head>
+<style>
+  div{
+    min-width: 100px;
+    min-height: 100px;
+    padding: 30px;
+    border: 1px solid black;
+  }
+</style>
 <body>
   <div class="btn-container">
  <button id="btn">click</button>
  </div>
+ <!-- <div id="granparent"> Gradnparent
+  <div id="parnet">Parent
+    <div id="child">Child</div>
+  </div>
+ </div> -->
 
-<script>
+
+
+
+<script src="events.js"></script>
+<!-- <script>
   document.getElementById('btn').onclick = function(){
     alert("hello")
   }
@@ -62,6 +79,6 @@ document.getElementById('btn').addEventListener('click',function(e){
   }) 
   // will remove the element when click 
 
-</script>
+</script> -->
 </body>
 </html>
